# lightning-engine-core

./: .gitignore  CMakeLists.txt  README.md
include/Core/: Base.h  Core.h  Dev_Core.h  Types.h  entry_point.h
include/Core/Application/: Application.h
include/Core/ECS/: Component_Pool.hpp  Entity_map.hpp  FastView.hpp  View.hpp
include/Core/Events/: EBus.hpp  EBusImplementation.hpp  EBusTraits.hpp  EventBus.hpp  EventHandel.hpp  EventManager.hpp  EventNoDataHandel.hpp  Interface.hpp
include/Core/IO/: KeyCode.h  MouseCode.h
include/Core/Log/: Loger.h
include/Core/Module/: BaseModule.h  ModuleManager.h  ModuleRegistrations.h
include/Core/Rendering/: FrameBuffer.h  IndexBuffer.h  RenderAPI.h  Shader.h  Texture.h  UnifromBuffer.h  VertexArray.h  VertexBuffer.h
include/Core/System/: BaseSystem.h  SystemManger.cpp  SystemManger.h
include/Core/Time/: Timer.h
include/Core/Window/: Window.h  Window_Events.h
include/Platform/Linux/: Linux_Log.h
include/Platform/OSX/: OSX_Log.h
include/Platform/OpenGL/: OpenGL_Window.h
include/Platform/Windows/: Window_Log.h
lib/glew/: glew.pc
lib/stb_image/: CMakeLists.txt
lib/stb_image/src/: stb_image.h
src/Core/Application/: Application.cpp
src/Core/ECS/: Component_Pool.hpp  Entity_map.hpp  FastView.hpp  View.hpp  registry.cpp  registry.h
src/Core/Log/: Loger.cpp
src/Core/Module/: ModuleManager.cpp
src/Core/Rendering/: FrameBuffer.cpp  IndexBuffer.cpp  RenderAPI.cpp  Shader.cpp  Texture.cpp  UnifromBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Core/System/: BaseSystem.cpp  SystemManger.cpp
src/Core/Time/: Timer.cpp
src/Core/Window/: Window.cpp
src/Platform/Linux/: Filesystem_Linux.cpp
src/Platform/OSX/: Metal_Window.cpp  Metal_Window.h
src/Platform/OpenGL/: OpenGL_Window.cpp  OpenGL_Window.h
src/Platform/Windows/: Filesystem_Windows.cpp
